# OBS-29.0.2-

./: CMakeLists.txt  INSTALL.md  README.md  do_build.bat  gen_libs2.ps1  quick_build.bat
src/: auto-switcher.cpp  auto-switcher.h  plugin-main.cpp  ui-panel.cpp  ui-panel.h
